docs-archive/apache-airflow-providers-edge3/1.2.0/_sources/_api/airflow/providers/edge3/cli/edge_command/index.rst.txt
airflow.providers.edge3.cli.edge_command
========================================

.. py:module:: airflow.providers.edge3.cli.edge_command


Attributes
----------

.. autoapisummary::

   airflow.providers.edge3.cli.edge_command.logger
   airflow.providers.edge3.cli.edge_command.EDGE_WORKER_HEADER
   airflow.providers.edge3.cli.edge_command.ARG_CONCURRENCY
   airflow.providers.edge3.cli.edge_command.ARG_QUEUES
   airflow.providers.edge3.cli.edge_command.ARG_EDGE_HOSTNAME
   airflow.providers.edge3.cli.edge_command.ARG_REQUIRED_EDGE_HOSTNAME
   airflow.providers.edge3.cli.edge_command.ARG_MAINTENANCE
   airflow.providers.edge3.cli.edge_command.ARG_MAINTENANCE_COMMENT
   airflow.providers.edge3.cli.edge_command.ARG_REQUIRED_MAINTENANCE_COMMENT
   airflow.providers.edge3.cli.edge_command.ARG_QUEUES_MANAGE
   airflow.providers.edge3.cli.edge_command.ARG_WAIT_MAINT
   airflow.providers.edge3.cli.edge_command.ARG_WAIT_STOP
   airflow.providers.edge3.cli.edge_command.ARG_OUTPUT
   airflow.providers.edge3.cli.edge_command.ARG_STATE
   airflow.providers.edge3.cli.edge_command.ARG_DAEMON
   airflow.providers.edge3.cli.edge_command.ARG_UMASK
   airflow.providers.edge3.cli.edge_command.ARG_STDERR
   airflow.providers.edge3.cli.edge_command.ARG_STDOUT
   airflow.providers.edge3.cli.edge_command.ARG_LOG_FILE
   airflow.providers.edge3.cli.edge_command.EDGE_COMMANDS


Functions
---------

.. autoapisummary::

   airflow.providers.edge3.cli.edge_command.force_use_internal_api_on_edge_worker
   airflow.providers.edge3.cli.edge_command.worker
   airflow.providers.edge3.cli.edge_command.status
   airflow.providers.edge3.cli.edge_command.maintenance
   airflow.providers.edge3.cli.edge_command.stop
   airflow.providers.edge3.cli.edge_command.list_edge_workers
   airflow.providers.edge3.cli.edge_command.put_remote_worker_on_maintenance
   airflow.providers.edge3.cli.edge_command.remove_remote_worker_from_maintenance
   airflow.providers.edge3.cli.edge_command.remote_worker_update_maintenance_comment
   airflow.providers.edge3.cli.edge_command.remove_remote_worker
   airflow.providers.edge3.cli.edge_command.remote_worker_request_shutdown
   airflow.providers.edge3.cli.edge_command.add_worker_queues
   airflow.providers.edge3.cli.edge_command.remove_worker_queues


Module Contents
---------------

.. py:data:: logger

.. py:data:: EDGE_WORKER_HEADER
   :value: ''


.. py:function:: force_use_internal_api_on_edge_worker()

   Ensure the environment is configured for the internal API without explicit declaration.

   This is only required for an Edge worker and must to be done before the Click CLI wrapper is initiated.
   That is because the CLI wrapper will attempt to establish a DB connection, which will fail before the
   function call can take effect. In an Edge worker, we need to "patch" the environment before starting.


.. py:function:: worker(args)

   Start Airflow Edge Worker.


.. py:function:: status(args)

   Check for Airflow Local Edge Worker status.


.. py:function:: maintenance(args)

   Set or Unset maintenance mode of local edge worker.


.. py:function:: stop(args)

   Stop a running local Airflow Edge Worker.


.. py:function:: list_edge_workers(args)

   Query the db to list all registered edge workers.


.. py:function:: put_remote_worker_on_maintenance(args)

   Put remote edge worker on maintenance.


.. py:function:: remove_remote_worker_from_maintenance(args)

   Remove remote edge worker from maintenance.


.. py:function:: remote_worker_update_maintenance_comment(args)

   Update maintenance comments of the remote edge worker.


.. py:function:: remove_remote_worker(args)

   Remove remote edge worker entry from db.


.. py:function:: remote_worker_request_shutdown(args)

   Initiate the shutdown of the remote edge worker.


.. py:function:: add_worker_queues(args)

   Add queues to an edge worker.


.. py:function:: remove_worker_queues(args)

   Remove queues from an edge worker.


.. py:data:: ARG_CONCURRENCY

.. py:data:: ARG_QUEUES

.. py:data:: ARG_EDGE_HOSTNAME

.. py:data:: ARG_REQUIRED_EDGE_HOSTNAME

.. py:data:: ARG_MAINTENANCE

.. py:data:: ARG_MAINTENANCE_COMMENT

.. py:data:: ARG_REQUIRED_MAINTENANCE_COMMENT

.. py:data:: ARG_QUEUES_MANAGE

.. py:data:: ARG_WAIT_MAINT

.. py:data:: ARG_WAIT_STOP

.. py:data:: ARG_OUTPUT

.. py:data:: ARG_STATE

.. py:data:: ARG_DAEMON

.. py:data:: ARG_UMASK

.. py:data:: ARG_STDERR

.. py:data:: ARG_STDOUT

.. py:data:: ARG_LOG_FILE

.. py:data:: EDGE_COMMANDS
   :type:  list[airflow.cli.cli_config.ActionCommand]

